--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 В данном репозитории собраны минипроекты для иллюстрации проделанных работ.
+
+1. calculator - примитивный калькулятор.
+2. primeForStepik-battery - пример к курсу на Stepik о том как могут работать интерфейсы.
+3. consoleToDoList - консольная версия планировщика задач с вынесеной базой данных.
